--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style=`background-image: url(${"/images/backgroundimage.svg"})`></div>
+    <div>
+      Page Not Found
+      <a href="https://seantisdale.netlify.app/">Home</a>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
