--- a/public/404.html
+++ b/public/404.html
@@ -18,9 +18,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div backgroundImage="/images/backgroundimage.svg">
-      Page Not Found
+      Oops! Page Not Found
       <a href="https://seantisdale.netlify.app/">Home</a>
     </div>
-    ;
   </body>
 </html>
