--- a/public/404.html
+++ b/public/404.html
@@ -17,9 +17,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div backgroundImage="/images/backgroundimage.svg">
+    <div>
       Oops! Page Not Found. ->
-      <a href="https://seantisdale.netlify.app/">Home</a>
+      <a href="https://www.stisdale.com/">Home</a>
     </div>
   </body>
 </html>
